# learnOpenGL

./: CMakeLists.txt
.cache/clangd/index/: glad.c.1C0CD1905A78FFE6.idx  glad.h.680E36CA7BEAD043.idx  glfw3.h.2236F1ABED289C2F.idx  khrplatform.h.5DBC54B1921870A4.idx  main.cpp.95BCEF166AE41BBE.idx  shader_s.h.2F2E154A5E101898.idx  stb_image.cpp.3A14E49D4E2E94C4.idx  stb_image.h.955E88BA09688B59.idx
src/: .main.cpp.swp  main.cpp  stb_image.cpp
src/headers/: shader_s.h
src/shaders/: .shader.vert.swp  shader.frag  shader.vert
vsbuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad.vcxproj  glad.vcxproj.filters  learnOpenGL.sln  learnOpenGL.vcxproj  learnOpenGL.vcxproj.filters
vsbuild/Debug/: glad.lib
vsbuild/glad.dir/Debug/glad.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
vsbuild/learnOpenGL.dir/Debug/: learnOpenGL.exe.recipe  learnOpenGL.ilk
vsbuild/learnOpenGL.dir/Debug/learnOpenGL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  learnOpenGL.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
vsbuild/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
vsbuild/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
